--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head><title>Daniel Smieszny Home</title></head>
+  <head>
+    <title>Daniel Smieszny Home</title>
+    <link href="style.css" rel="stylesheet" />
+  </head>
   <body>
     <header>
       <h1>Daniel Smieszny</h1>
