--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
   <head>
     <title>Daniel Smieszny Home</title>
-    <link href="./style.css" rel="stylesheet" />
+    <link href="./styles/main.css" rel="stylesheet" />
   </head>
   <body>
     <header>
       <h1>Daniel Smieszny</h1>
       <h3>Student, Michigan State</h3>
+      <nav>
+        <a href="./resume.html"><button>Resume</button></a>
+      </nav>
     </header>
     <main>
       <p>My name is Daniel Smieszny and I am a 4th year Data Science major graduating May 2023</p>
