--- a/resume.html
+++ b/resume.html
@@ -7,9 +7,22 @@
     <body>
         <header>
             <h1>My resume</h1>
-            <nav>
-                <a href="./index.html"><button>Home</button></a>
-              </nav>
         </header>
+        <nav>
+            <a href="./index.html"><button>Home</button></a>
+        </nav>
+        <resume>
+            <resume_header>
+                <h1>Daniel Smieszny</h1>
+                <h3>Data Science, Michigan State</h3>
+            </resume_header>
+            <about>
+                <h4>About Me</h4>
+                <p>4th-year student at Michigan State University majoring in Data Science.
+                    Excels at problem-solving and critical thinking.
+                    Experience with Python, including Pandas, Numpy, and Pyplot, as well as R, and C++.
+                    Courses this upcoming semester include Database Systems and Big Data Analysis.</p>
+            </about>
+        </resume>
     </body>
 </html>
