--- a/resume.html
+++ b/resume.html
@@ -1,28 +1,73 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Dan's Resume</title>
-        <link href="./styles/main.css" rel="stylesheet" />
-    </head>
-    <body>
-        <header>
-            <h1>My resume</h1>
-        </header>
-        <nav>
-            <a href="./index.html"><button>Home</button></a>
-        </nav>
-        <resume>
-            <resume_header>
-                <h1>Daniel Smieszny</h1>
-                <h3>Data Science, Michigan State</h3>
-            </resume_header>
-            <about>
-                <h4>About Me</h4>
-                <p>4th-year student at Michigan State University majoring in Data Science.
-                    Excels at problem-solving and critical thinking.
-                    Experience with Python, including Pandas, Numpy, and Pyplot, as well as R, and C++.
-                    Courses this upcoming semester include Database Systems and Big Data Analysis.</p>
-            </about>
-        </resume>
-    </body>
+
+<head>
+  <title>resume</title>
+  <link href="styles/main.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <header>
+    <h1>My resume</h1>
+  </header>
+  <nav>
+    <a href="./index.html"><button>Home</button></a>
+  </nav>
+  <res-header>
+    <h1>Daniel Smieszny</h1>
+    <p>419 Main Street, Acton, MA | 339-224-7449</p>
+    <p>danielsmieszny@outlook.com</p>
+  </res-header>
+  <div class="summary">
+    <h3>Summary</h3>
+    <hr>
+    <p>I am a 4th-year student at Michigan State University with a 3.3 GPA. I am pursuing a major in Data Science in the College of Natural Science. I am looking for an internship focusing on data science and analytics in order to gain experience using data in professional setting. I can start working in the third week of May 2022. I excel at problem-solving and critical thinking, I am also a quick learner and willing to learn new languages and tools. I can provide my recent projects upon request.</p>
+  </div>
+  <div class="education">
+    <h3>Education</h3>
+    <hr>
+    <h4>Michigan State University | East Lansing, MI<br>Data Science | Expected Graduation May, 2023</h4>
+    <ul>
+      <li>Focusing on a career in data structures and algorithms, as well as databases and big data anlysis</li>
+      <li>Dean's List Summer 2021</li>
+    </ul>
+  </div>
+  <div class="skills">
+    <h3>Skills</h3>
+    <hr>
+    <ul>
+      <li>Python</li>
+      <li>scikit-learn</li>
+      <li>Pandas</li>
+      <li>SQL</li>
+      <li>Git</li>
+      <li>AWS EC2</li>
+      <li>R</li>
+      <li>C++</li>
+    </ul>
+  </div>
+  <div class="experience">
+    <h3>Work History</h3>
+    <hr>
+    <h4>Michigan State University | East Lansing, MI<br>Service Center Receptionist | 03/22 - Present</h4>
+    <ul>
+      <li>Used customer service skills with current residents and familiess</li>
+      <li>Maintained inventory of packages using computer system</li>
+    </ul>
+    <h4>Smitty's Homemade Ice Cream | Falmouth, MA<br>Ice Cream Maker | 05/17 - 08/22 (Summers)</h4>
+    <ul>
+      <li>Operated and maintained ice cream machines</li>
+      <li>Used customer service skills to get repeat customers</li>
+    </ul>
+  </div>
+  <div class="certificates">
+    <h3>Certificates</h3>
+    <hr>
+    <ul>
+      <li>Codecademy HTML</li>
+      <li>Codecademy CSS</li>
+    </ul>
+  </div>
+  </body>
+
 </html>
