--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
   <link href="styles/main.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
+<body class="site">
   <header>
     <h1>My resume</h1>
   </header>
